--- a/views/index.erb
+++ b/views/index.erb
@@ -4,8 +4,14 @@
 
 <body>
     <p>
-        The SECRET NUMBER is
-        <%= number %>
+        Guess the number!
+    </p>
+    <form>
+        <input type="text" name='guess' />
+        <input type="submit" value='Guess!' />
+    </form>
+    <p>
+        <%= message %>
     </p>
 </body>
 
