add max turns and new game

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,6 +19,10 @@
     <p>
         <%= message %>
     </p>
+    <p>
+        You have
+        <%= guesses %> guesses left!
+    </p>
 </body>
 
 </html>
